--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -6,10 +6,11 @@
 		<title>Multiroom Chat</title>
 		
 		<!-- JQUERY -->
-		<script src="js/jquery-2.2.1.js"></script>
+		<script src="/js/jquery-3.3.1.js"></script>
 		
-		<!-- bootstrap - link cdn -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<!-- bootstrap-->
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<script src="/js/bootstrap.min.js"></script>
 	
 		<!-- estilo -->
 		<link href="css/style.css" rel="stylesheet">
@@ -105,17 +106,17 @@
 				<div class="col-md-1"></div>
 				<div class="col-md-10">
 					<span class="participante">
-						<img src="images/ico_usuario.png" />
+						<img src="/images/ico_usuario.png" />
 						Jorge
 					</span>
 					
 					<span class="participante">
-						<img src="images/ico_usuario.png" />
+						<img src="/images/ico_usuario.png" />
 						José
 					</span>
 					
 					<span class="participante">
-						<img src="images/ico_usuario.png" />
+						<img src="/images/ico_usuario.png" />
 						Fernando
 					</span>
 				</div>
@@ -140,8 +141,5 @@
 				</div>
 			</div>
 		</nav>		
-		
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		
 	</body>
 </html>
