--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,22 +5,22 @@
 
 		<title>Multiroom Chat</title>
 		
-		<!-- bootstrap - link cdn -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	
+		<!-- bootstrap-->
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+        
 		<!-- estilo -->
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 
 	<body>
 
-		<div class="container">
-            <div class="row vertical-offset-80">
-                <div class="col-md-4 col-md-offset-4">
+		<div class="container h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-4">
                     <div class="panel panel-default">
                     	<div class="panel-heading">                                
                             <div class="row-fluid user-row">
-                                <img src="images/multiroom_chat_2.png" class="img-responsive" alt="Multiroom Chat"/>
+                                <img src="/images/multiroom_chat_2.png" class="img-responsive" alt="Multiroom Chat"/>
                             </div>
                         </div>
                         <div class="panel-body">
