--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -61,31 +61,8 @@
 		<div class="container">
             <div class="row conversa" id="conversa">
 				<div class="col-md-1"></div>
-				<div class="col-md-10">
-					<div class="dialogo">
-						<h4>Jorge</h4>
-						<p>Fala José, blz cara?</p>
-					</div>
-					
-					<div class="dialogo">
-						<h4>José</h4>
-						<p>Opa, tudo certo!</p>
-					</div>
-					
-					<div class="dialogo">
-						<h4>Jorge</h4>
-						<p>Vai estudar mais sobre NodeJS hoje?</p>
-					</div>
-					
-					<div class="dialogo">
-						<h4>José</h4>
-						<p>Sim, com certeza. Vamos trabalhar com Websockets hoje, o assunto é bem interessante</p>
-					</div>
-					
-					<div class="dialogo">
-						<h4>Jorge</h4>
-						<p>Show de bola, comunicação bi-direcional em páginas ou sistemas web é muito bacana mesmo</p>
-					</div>
+				<div class="col-md-10" id="dialogo">
+
 				</div>
 				<div class="col-md-1"></div>
                 
@@ -130,6 +107,16 @@
 		<script src="socket.io/socket.io.js"></script>
 		<script>
 			let socket = io('http://localhost:3001');
+
+			socket.on('msgCliente', function(data){
+				let html = '<div class="dialogo">' 
+								+'<h4>'+data.apelido+'</h4>'
+								+'<p>'+data.apelido+' acaba de se conectar</p>'
+						  +'</div>';
+				
+				$("#dialogo").append(html);
+				
+			});
 		</script>
 	</body>
 </html>
