--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -16,7 +16,7 @@
 
 		<div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-                <div class="col-4">
+                <div class="col-md-6 col-lg-4 col-sm-8">
                     <div class="panel panel-default">
                     	<div class="panel-heading">                                
                             <div class="row-fluid user-row">
