--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -70,21 +70,8 @@
 			
 			<div class="row participantes" id="participantes" style="display:none">
 				<div class="col-md-1"></div>
-				<div class="col-md-10">
-					<span class="participante">
-						<img src="/images/ico_usuario.png" />
-						Jorge
-					</span>
-					
-					<span class="participante">
-						<img src="/images/ico_usuario.png" />
-						José
-					</span>
-					
-					<span class="participante">
-						<img src="/images/ico_usuario.png" />
-						Fernando
-					</span>
+				<div class="col-md-10" id="participante">
+
 				</div>
 				<div class="col-md-1"></div>
                 
@@ -96,6 +83,7 @@
 				<div class="input-group">
 					<input type="text" class="form-control" placeholder="Mensagem" id="mensagem">
 					<input type="hidden" value="<%= formulario.apelido %>" id="apelido">
+					<input type="hidden" value="0" id="apelidoAtualizado">
 					<span class="btn enviar" id="enviar_mensagem">
 						<img width="30" height="30" src="/images/send.png" />
 					</span>
@@ -112,10 +100,20 @@
 								+'<h4>'+data.apelido+'</h4>'
 								+'<p>'+data.mensagem+'</p>'
 						  +'</div>';
-				
+
 				$("#dialogo").append(html);
+				window.scrollTo(0, document.body.scrollHeight);
 			});
 
+			socket.on('participantesCliente', function(data){
+				let html = '<span class="participante">' 
+								+'<img src="/images/ico_usuario.png" />'
+								+ data.apelido
+						  +'</span>';
+
+				$("#participante").append(html);
+			});
+			
 			$("#enviar_mensagem").click(function(){
 				EnviarMensagem();
 			})
@@ -130,8 +128,10 @@
 			function EnviarMensagem(){
 				let mensagem = $("#mensagem").val();
 				let apelido = $("#apelido").val();
-				socket.emit('msgServidor', {apelido: apelido, mensagem: mensagem});
+				let apelido_atualizado = $("#apelidoAtualizado").val();
+				socket.emit('msgServidor', {apelido: apelido, mensagem: mensagem, apelido_atualizado: apelido_atualizado});
 
+				$("#apelidoAtualizado").val(1);
 				$("#mensagem").val('');
 			}
 
